--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,19 +23,19 @@
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.GetStartedActivity"
+            android:name=".activites.lets_start.GetStartedActivity"
             android:exported="true" />
         <activity
-            android:name=".activites.RegistrationActivity"
+            android:name=".activites.login_reg.RegistrationActivity"
             android:exported="true" />
         <activity
-            android:name=".activites.LoginActivity"
+            android:name=".activites.login_reg.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.WelcomeActivity"
+            android:name=".activites.lets_start.WelcomeActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.MainActivity"
+            android:name=".activites.lets_start.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
