--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
         android:theme="@style/Theme.Final_project_1200105"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".ui_admin.admin.home.AdminHomeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_admin_home"
+            android:theme="@style/Theme.Final_project_1200105.NoActionBar" />
+        <activity
+            android:name=".ui.Main_frag.MainActivity2"
             android:exported="false"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.Final_project_1200105.NoActionBar" />
