--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:label="@string/title_activity_admin_home"
             android:theme="@style/Theme.Final_project_1200105.NoActionBar" />
         <activity
-            android:name=".ui.Main_frag.MainActivity2"
+            android:name=".ui_normal_user.Main_frag.MainActivity2"
             android:exported="false"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.Final_project_1200105.NoActionBar" />
@@ -33,19 +33,19 @@
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.lets_start.GetStartedActivity"
+            android:name=".start_activites.lets_start.GetStartedActivity"
             android:exported="true" />
         <activity
-            android:name=".activites.login_reg.RegistrationActivity"
+            android:name=".start_activites.login_reg.RegistrationActivity"
             android:exported="true" />
         <activity
-            android:name=".activites.login_reg.LoginActivity"
+            android:name=".start_activites.login_reg.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.lets_start.WelcomeActivity"
+            android:name=".start_activites.lets_start.WelcomeActivity"
             android:exported="false" />
         <activity
-            android:name=".activites.lets_start.MainActivity"
+            android:name=".start_activites.lets_start.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
